[package]
name = "axum-sockets"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.86"
socketioxide = "0.13.1"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
